--- a/tribute/index.html
+++ b/tribute/index.html
@@ -4,41 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tribute Page</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>Centered Tribute Page</title>
+    <link rel="stylesheet" href="Tstyle.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
-    <header>
-        <h1>Justine Gail Valdez</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1 class="main-title">Gloria Pacada</h1>
+        </header>
 
-    <main>
-        <section class="tribute-banner">
-            <img src="path-to-image.jpg" alt="Justine Gail Valdez" class="tribute-image">
-            <div class="tribute-text">
-                <h2>In Loving Memory of my old self</h2>
-                <h3>Justine Gail Valdez</h3>
-                <p>Januaray 30, 2000</p>
-            </div>
-        </section>
-
-        <section class="tribute-content">
-            <p> Sometimes, there are dreams and aspirations you wish you could have pursued, but I understand how difficult it can be to fight for 
-                what you love when you come from a dysfunctional family. 
-                The impact of that environment often makes it hard to function and thrive. 
-                You may look back and think about all the things you could have done better if not for those struggles. 
-                <!--I wrote this about myself cause I had a long way to go, still fixing mysel from a dysfunctional family for 23 years of my life, It's not easy 
-                as it seems, I know ther are a lot of things to learn independently, but atleast I am safe now in where I am now.-->
-            </p>
+        <section class="content">
+            <h2>In Loving Memory of</h2>
+            <p>Our Treasure. Forever Loved.</p>
+            <p>Thank you for being the most genuine and loving person I’ve ever had. Your kindness and unwavering love have left a lasting impact on all of us.</p>
         </section>
 
         <footer>
-            <p>Author of Tribute Site: <a href="mailto:email@example.com">gail@gmail.com</a></p>
-            <div class="footer-links">
-                <a href="#">About</a> | <a href="#">Contact Us</a>
-            </div>
-            <p>Copyright © 2024 OurBeloved.com. All rights reserved.</p>
+            <p>OurBeloved.com <br> Copyright 2022 OurBeloved.com. All rights reserved.</p>
+            <p>Author of Tribute Site: <a href="mailto:email@example.com">email@example.com</a></p>
         </footer>
-    </main>
+    </div>
 </body>
 </html>
