--- a/tribute/index.html
+++ b/tribute/index.html
@@ -16,8 +16,8 @@
         <section class="content">
             <h2>In Loving Memory of</h2>
             <p>Our Treasure. Forever Loved.</p>
-            <p>Thank you for being the most genuine and loving person I’ve ever had. Your kindness and unwavering love have left a lasting impact on all of us.</p>
-        </section>
+            <p>Thank you for being the most genuine and loving tita I’ve ever had. Even though our family is no longer whole, you have always been one of the role models I deeply admire.</p>
+            <p>Your kindness and unwavering love have left a lasting impact on all of us. Though this message may not reach where you are now, I find comfort knowing that you’re finally free from pain. Until we meet again.</p>
 
         <footer>
             <p>OurBeloved.com <br> Copyright 2022 OurBeloved.com. All rights reserved.</p>
