--- a/tribute/index.html
+++ b/tribute/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centered Tribute Page</title>
-    <link rel="stylesheet" href="Tstyle.css"> <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="Tstyle.css"> <!-- Link to external CSS file -->
 </head>
 <body>
     <div class="container">
