--- a/product/index.html
+++ b/product/index.html
@@ -2,10 +2,67 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cool Toned Makeup Collection</title>
+    <link rel="stylesheet" href="makeupstyles.css">
 </head>
 <body>
-    
+    <header class="hero">
+        <nav class="navbar">
+            <div class="logo">CoolTones</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <button class="cta">Shop Now</button>
+        </nav>
+        <div class="hero-content">
+            <h1>Embrace Your Cool Tone</h1>
+            <p>Discover the latest in cool-toned makeup collections that redefine elegance and sophistication.</p>
+            <button class="cta">Explore Collection</button>
+        </div>
+    </header>
+
+    <section id="about" class="about">
+        <h2>Why Cool Tones?</h2>
+        <p>Cool-toned makeup enhances your natural beauty with shades that complement fair and deep cool undertones, giving you a fresh, radiant look.</p>
+    </section>
+
+    <section id="products" class="products">
+        <h2>Our Bestsellers</h2>
+        <div class="product-grid">
+            <div class="product-card">
+                <img src="path/to/eyeshadow.jpg" alt="Cool Toned Eyeshadow Palette">
+                <h3>Eyeshadow Palette</h3>
+                <p>Shimmering and matte shades for every occasion.</p>
+                <button class="cta">Buy Now</button>
+            </div>
+            <div class="product-card">
+                <img src="path/to/lipstick.jpg" alt="Cool Toned Lipstick">
+                <h3>Lipstick</h3>
+                <p>Hydrating, long-lasting formula in cool-toned hues.</p>
+                <button class="cta">Buy Now</button>
+            </div>
+            <div class="product-card">
+                <img src="path/to/blush.jpg" alt="Cool Toned Blush">
+                <h3>Blush</h3>
+                <p>Soft, buildable color for a natural flush.</p>
+                <button class="cta">Buy Now</button>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact" class="footer">
+        <h2>Contact Us</h2>
+        <p>Have questions? Reach out to us via email at <a href="mailto:support@cooltones.com">support@cooltones.com</a></p>
+        <div class="social-icons">
+            <a href="#"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
+            <a href="#"><img src="path/to/twitter-icon.png" alt="Twitter"></a>
+        </div>
+        <p class="copyright">© 2024 CoolTones. All rights reserved.</p>
+    </footer>
 </body>
 </html>
