--- a/tribute/index.html
+++ b/tribute/index.html
@@ -21,7 +21,7 @@
 
         <footer>
             <p>OurBeloved.com <br> Copyright 2024 OurBeloved.com. All rights reserved.</p>
-            <p>Author of Tribute Site: <a href="mailto:email@example.com">email@example.com</a></p> 
+            <p>Author of Tribute Site: <a href="gail@gmail.com">gail@gmail.com</a></p> 
         </footer>
     </div>
 </body>
