--- a/product/index.html
+++ b/product/index.html
@@ -34,19 +34,21 @@
         <h2>Our Bestsellers</h2>
         <div class="product-grid">
             <div class="product-card">
-                <img src="path/to/eyeshadow.jpg" alt="Cool Toned Eyeshadow Palette">
+                <img src="https://drive.google.com/thumbnail?id=1hNhQxIaOTMU-pqUz5-9H8yhE-QYg0-uW" alt="Cool Toned Eyeshadow Palette">
+               
                 <h3>Eyeshadow Palette</h3>
                 <p>Shimmering and matte shades for every occasion.</p>
                 <button class="cta">Buy Now</button>
             </div>
             <div class="product-card">
-                <img src="path/to/lipstick.jpg" alt="Cool Toned Lipstick">
+                <img src="https://drive.google.com/thumbnail?id=1vHvVgLXIIBg-YVn-509RrG8cdMR2qHd_" alt="Cool Toned Lipstick">
+            
                 <h3>Lipstick</h3>
                 <p>Hydrating, long-lasting formula in cool-toned hues.</p>
                 <button class="cta">Buy Now</button>
             </div>
             <div class="product-card">
-                <img src="path/to/blush.jpg" alt="Cool Toned Blush">
+                <img src="https://drive.google.com/thumbnail?id=1AS8vEQSsrpb7vdTrt5e2Fq5G9lE0GYTQ" alt="Cool Toned Blush">
                 <h3>Blush</h3>
                 <p>Soft, buildable color for a natural flush.</p>
                 <button class="cta">Buy Now</button>
@@ -58,9 +60,9 @@
         <h2>Contact Us</h2>
         <p>Have questions? Reach out to us via email at <a href="mailto:support@cooltones.com">support@cooltones.com</a></p>
         <div class="social-icons">
-            <a href="#"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
-            <a href="#"><img src="path/to/twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="https://drive.google.com/thumbnail?id=1WI2vUHQ2KkVraChkdykghQ2-Qh3xy2qo" alt="Facebook"></a> 
+            <a href="#"><img src="https://drive.google.com/thumbnail?id=1lpbL_wb-hO7h-mJZHNjuJzCkljYX96Cp" alt="Instagram"></a>
+            <a href="#"><img src="https://drive.google.com/thumbnail?id=1PpFvGUPedjbBI4DttK6gapV2J6AA6n1G" alt="Twitter"></a>
         </div>
         <p class="copyright">© 2024 CoolTones. All rights reserved.</p>
     </footer>
