updated with image

--- a/tribute/index.html
+++ b/tribute/index.html
@@ -14,6 +14,7 @@
         </header>
 
         <section class="content">
+            <img src="https://drive.google.com/thumbnail?id=1t13rdhUMf7Dt4YNN9XFMzj11p9HyN83S" alt="Gloria Pacada" class="memorial-image">
             <h2>In Loving Memory of</h2>
             <p>Our Treasure. Forever Loved.</p>
             <p>Thank you for being the most genuine and loving tita I’ve ever had. Even though our family is no longer whole, you have always been one of the role models I deeply admire.</p>
