updated assets and code

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,9 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="Pstyle.css"> <!-- Link to external CSS -->
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Gail Portfolio Galore</h1>
+        <p>Welcome to my portfolio! Here are some projects I've built using HTML,CSS. and Javascript</p>
+    </header>
+
+    <main class="projects">
+        <!-- Product -->
+        <div class="project-card">
+            <h2>Product</h2>
+            <img src="https://drive.google.com/thumbnail?id=1ON4JpzDFeaqp2urcCBnclyJZYJLBlTBH" alt="Project 1 Screenshot">
+            <p>I made a simple website for cooltoned makeup.</p>
+            <a href="http://127.0.0.1:5500/product/index.html" class="btn" target="_blank">View Project</a>
+        </div>
+        
+        <!-- Survey -->
+        <div class="project-card">
+            <h2>Survey</h2>
+            <img src="https://drive.google.com/thumbnail?id=1VlMg5xlQVXMQKvJEkNZ6OMRoXOoEmlKn" alt="Project 2 Screenshot">
+            <p>A satisfaction survey for costumers to engage with for the to improve more</p>
+            <a href="http://127.0.0.1:5500/survey/index.html" class="btn" target="_blank">View Project</a>
+        </div>
+
+        <!-- Technical Docs -->
+        <div class="project-card">
+            <h2>Technical Docs</h2>
+            <img src="https://drive.google.com/thumbnail?id=1HeynNRjTIduiwA0A1FIGfK3XQ6fZQp0L" alt="Project 3 Screenshot">
+            <p>This is a Techscript documentation. Click more to know what is techscript.</p>
+            <a href="http://127.0.0.1:5500/technical_docs/index.html" class="btn" target="_blank">View Project</a>
+        </div>
+
+        <!-- Tribute -->
+        <div class="project-card">
+            <h2>Tribute</h2>
+            <img src="https://drive.google.com/thumbnail?id=11mGR8P_XAbVPMLcmfXgIWl9r4OSx1EAS" alt="Project 4 Screenshot">
+            <p>This is a tribute website for my Tita.</p>
+            <a href="http://127.0.0.1:5500/tribute/index.html" class="btn" target="_blank">View Project</a>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p>© 2024 GailV Portfolio. All rights reserved.</p>
+    </footer>
 </body>
 </html>
