--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
             <h2>Product</h2>
             <img src="https://drive.google.com/thumbnail?id=1ON4JpzDFeaqp2urcCBnclyJZYJLBlTBH" alt="Project 1 Screenshot">
             <p>I made a simple website for cooltoned makeup.</p>
-            <a href="product/index.html" class="btn" target="_blank">View Project</a>
+            <a href="./product/index.html" class="btn" target="_blank">View Project</a>
         </div>
         
         <!-- Survey -->
@@ -26,7 +26,7 @@
             <h2>Survey</h2>
             <img src="https://drive.google.com/thumbnail?id=1VlMg5xlQVXMQKvJEkNZ6OMRoXOoEmlKn" alt="Project 2 Screenshot">
             <p>A satisfaction survey for costumers to engage with for the to improve more</p>
-            <a href="survey/index.html" class="btn" target="_blank">View Project</a>
+            <a href="./survey/index.html" class="btn" target="_blank">View Project</a>
         </div>
 
         <!-- Technical Docs -->
@@ -34,7 +34,7 @@
             <h2>Technical Docs</h2>
             <img src="https://drive.google.com/thumbnail?id=1HeynNRjTIduiwA0A1FIGfK3XQ6fZQp0L" alt="Project 3 Screenshot">
             <p>This is a Techscript documentation. Click more to know what is techscript.</p>
-            <a href="technical_docs/index.html" class="btn" target="_blank">View Project</a>
+            <a href="./technical_docs/index.html" class="btn" target="_blank">View Project</a>
         </div> 
 
         <!-- Tribute -->
