--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
             <h2>Product</h2>
             <img src="https://drive.google.com/thumbnail?id=1ON4JpzDFeaqp2urcCBnclyJZYJLBlTBH" alt="Project 1 Screenshot">
             <p>I made a simple website for cooltoned makeup.</p>
-            <a href="./product/index.html" class="btn" target="_blank">View Project</a>
+            <a href="http://127.0.0.1:5501/product/index.html" class="btn" target="_blank">View Project</a>
         </div>
         
         <!-- Survey -->
