all href updated

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,7 +26,7 @@
             <h2>Survey</h2>
             <img src="https://drive.google.com/thumbnail?id=1VlMg5xlQVXMQKvJEkNZ6OMRoXOoEmlKn" alt="Project 2 Screenshot">
             <p>A satisfaction survey for costumers to engage with for the to improve more</p>
-            <a href="./survey/index.html" class="btn" target="_blank">View Project</a>
+            <a href="http://127.0.0.1:5501/survey/index.html" class="btn" target="_blank">View Project</a>
         </div>
 
         <!-- Technical Docs -->
@@ -34,7 +34,7 @@
             <h2>Technical Docs</h2>
             <img src="https://drive.google.com/thumbnail?id=1HeynNRjTIduiwA0A1FIGfK3XQ6fZQp0L" alt="Project 3 Screenshot">
             <p>This is a Techscript documentation. Click more to know what is techscript.</p>
-            <a href="./technical_docs/index.html" class="btn" target="_blank">View Project</a>
+            <a href="http://127.0.0.1:5501/technical_docs/index.html" class="btn" target="_blank">View Project</a>
         </div> 
 
         <!-- Tribute -->
@@ -42,7 +42,7 @@
             <h2>Tribute</h2>
             <img src="https://drive.google.com/thumbnail?id=11mGR8P_XAbVPMLcmfXgIWl9r4OSx1EAS" alt="Project 4 Screenshot">
             <p>This is a tribute website for my Tita.</p>
-            <a href="tribute/index.html" class="btn" target="_blank">View Project</a>
+            <a href="http://127.0.0.1:5501/tribute/index.html" class="btn" target="_blank">View Project</a>
         </div>
     </main>
 
